♿ A11y Fixes for Contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ li {
 }
 
 a {
-    color: orange;
+    color: #0f6bbb;
     text-decoration: none;
 }
 
@@ -77,13 +77,13 @@ section {
   }
 }
 #footer {
-    background-color: #444;
-    color: #aaa;
+    color: #444;
     font-size: 16px;
     letter-spacing: 1px;
     padding: 25px;
     text-align: center;
     text-transform: uppercase;
+    box-shadow: 0px 3px 20px 0 rgba(0,0,0,0.075)
 }
 
 /* ====================== Navigation ====================== */
@@ -236,7 +236,7 @@ nav h1 a {
 }
 
 #restaurants-list li h1 {
-    color: #f18200;
+    color: #0f6bbb;
     font-family: 'Roboto Slab', serif;
     font-size: 16px;
     font-weight: 400;
